tiptype sabemos lo que hace palta hacerle cositas con el thymeleaf

--- a/sailing/src/main/resources/templates/home.html
+++ b/sailing/src/main/resources/templates/home.html
@@ -31,10 +31,12 @@
 	<section class="container">
 		<!-- /* TODO - Include heading for 'Group Trips' */ -->
 		<!-- /* TODO - Include tripTypes for ${groupTrips}*/ -->
+		<p th:text="${groupTrips}"></p>
 	</section>
 	<section class="container">
 		<!-- /* TODO - Include heading for 'Private Trips' */ -->
 		<!-- /* TODO - Include tripTypes for ${privateTrips}*/ -->
+		<p th:text="${privateTrips}"></p>
 	</section>
 </body>
 </html>
