--- a/sailing/src/main/resources/templates/home.html
+++ b/sailing/src/main/resources/templates/home.html
@@ -26,48 +26,18 @@
 		<nav class="navbar navbar-default"
 			th:replace="~{fragments/template :: navbar}">Navbar</nav>
 
+		<div>
+			<section th:replace="~{fragments/template :: heading(#{dialogs.home.trip.group})}"></section>
+
+			<div th:replace="~{fragments/parts :: tripTypes(${groupTrips})}"></div>
+		</div>
+
+		<div>
+			<section th:replace="~{fragments/template :: heading(#{dialogs.home.trip.private})}"></section>
+			<div th:replace="~{fragments/parts :: tripTypes(${privateTrips})}"></div>
+		</div>
 	</section>
 
-	<div class="groupsSection">
-
-		<section th:text="#{dialogs.home.trip.group}" class="card my-1"></section>
-
-		<div  class="trips">
-			<table
-				class="table table-striped table-bordered table-condensed table-responsive" th:each="trip, iStat  : ${groupTrips}">
-
-				<tbody>
-					<tr>
-						<td th:text="${trip.title}" class="card my-1"></td>
-					</tr>
-					<tr>
-						<td class="card my-1">info extra + boton</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-
-	</div>
-
-	<div class="groupsSection">
-		<section th:text="#{dialogs.home.trip.private}" class="card my-1"></section>
-
-		<div  class="trips">
-			<table
-				class="table table-striped table-bordered table-condensed table-responsive" th:each="trip, iStat  : ${privateTrips}">
-
-				<tbody>
-					<tr>
-						<td th:text="${trip.title}" class="card my-1"></td>
-					</tr>
-					<tr>
-						<td class="card my-1">info extra + boton</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-
-	</div>
 
 </body>
 </html>
