/trips/book/ID now is showing; and next we will do the register for a triptype (trip/booking creation)

--- a/sailing/src/main/resources/templates/book_date.html
+++ b/sailing/src/main/resources/templates/book_date.html
@@ -33,6 +33,7 @@
 			class="card my-1">Booking</section>
 			
 			<!-- /* TODO - Build a form to get the departure date of the trip (DON'T FORGET TO INCLUDE CSRF FIELD!! */ -->
+			<!-- TODO - HACER EL FORM DE LA PAGINA 10 DEL PDF, Y LOS DATOS DEL TRIPTYPE ESTAN EN LA VARIABLE tripType, QUE SE LO ESTAMOS PASANDO A ESTA VISTA DESDE TRIPCONTROLLER.JAVA -->
 
 	</section>
 
