--- a/sailing/src/main/resources/templates/book_date.html
+++ b/sailing/src/main/resources/templates/book_date.html
@@ -31,9 +31,13 @@
 		<section
 			th:replace="~{fragments/template :: heading(#{book.heading})}"
 			class="card my-1">Booking</section>
-			
+
 			<!-- /* TODO - Build a form to get the departure date of the trip (DON'T FORGET TO INCLUDE CSRF FIELD!! */ -->
 			<!-- TODO - HACER EL FORM DE LA PAGINA 10 DEL PDF, Y LOS DATOS DEL TRIPTYPE ESTAN EN LA VARIABLE tripType, QUE SE LO ESTAMOS PASANDO A ESTA VISTA DESDE TRIPCONTROLLER.JAVA -->
+			
+		<form
+			th:replace="~{fragments/forms :: registerTrip(#{tripType.id})}"
+			class="card my-1">Formulario</form>
 
 	</section>
 
