--- a/sailing/src/main/resources/static/css/main.css
+++ b/sailing/src/main/resources/static/css/main.css
@@ -7,3 +7,10 @@
 	display: grid;
 	grid-template-columns: auto auto auto;
 }
+
+.inline {
+	width: 30%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
