--- a/sailing/src/main/resources/templates/book_date.html
+++ b/sailing/src/main/resources/templates/book_date.html
@@ -35,8 +35,7 @@
 			<!-- /* TODO - Build a form to get the departure date of the trip (DON'T FORGET TO INCLUDE CSRF FIELD!! */ -->
 			<!-- TODO - HACER EL FORM DE LA PAGINA 10 DEL PDF, Y LOS DATOS DEL TRIPTYPE ESTAN EN LA VARIABLE tripType, QUE SE LO ESTAMOS PASANDO A ESTA VISTA DESDE TRIPCONTROLLER.JAVA -->
 			
-		<form
-			th:replace="~{fragments/forms :: registerTrip(${tripType.id})}">Formulario</form>
+		<form th:replace="~{fragments/forms :: registerTrip(${tripType.id})}">Formulario</form>
 
 	</section>
 
