--- a/sailing/src/main/resources/templates/fragments/forms.html
+++ b/sailing/src/main/resources/templates/fragments/forms.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-	<form th:fragment="registerTrip(tripTypeID)" method="POST" th:action="@{/trips/book/book_departure}">
+	<form th:fragment="registerTrip(tripTypeID)" th:object="${trip}" method="POST" th:action="@{/trips/book/book_departure}">
 		<h4 th:text="${tripType.title}">2 hours trip</h4>
 		<div class="card-body">
 			<p th:text="${#numbers.formatDecimal(tripType.price, 1, 'COMMA', 0, 'POINT')+ '€'} + ' - ' + ${tripType.duration} + ' ' + (${tripType.duration==1} ? #{parts.trip.hour} : #{parts.trip.hours})"
@@ -29,10 +29,10 @@
 			<p th:text="${tripType.description}" class="text-secondary">desc</p>
 			<p th:text="${tripType.maxPlaces} + ' ' + #{parts.trip.places} "
 				class="card-text">places</p>
-			<span th:text="#{book.date}" class="card-text">Trip Date</span><span th:if="${newTripDate != null}" th:text="${newTripDate}" class="text-secondary">trip date</span>
+			<span th:text="#{book.date}" class="card-text">Trip Date</span>&emsp;&emsp;<span th:if="${newTripDate != null}" th:text="${newTripDate}" class="text-secondary">trip date</span>
 			<div class="inline" th:switch="${user.role}">
 				<p th:text="#{book.select.date}" class="text-secondary">Select trip Date</p>
-				<input th:if="${newTripDate == null}" class="text-secondary" type="date" name="newTripDate"/>
+				<input th:if="${newTripDate == null}" class="text-secondary" type="date" name="newTripDate" th:field="*{date}" />
 			</div>
 			<input class="btn btn-success" th:value="#{book.next}" type="submit"/>
 		</div>
