Finished book/book_date.html, /book/book_departure.html and almost finished /book/book_places.html. Falta que /book/book_places.html asigne bien el places al trip (debe restar lo que el usuario marque en el input a los places), que compruebe si está bien en el @PostMapping("/book/book_save") del TripController, y hacer que el @PostMapping("/book/book_save") guarde el trip.

--- a/sailing/src/main/resources/static/css/main.css
+++ b/sailing/src/main/resources/static/css/main.css
@@ -8,10 +8,22 @@
 	grid-template-columns: auto auto auto;
 }
 
-.inline {
-	width: 30%;
+.inlined {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
+	justify-content: flex-start;
+	align-items: start;
+}
+
+.blocked {
+	display: flex;
+	flex-direction: column;
+}
+
+.hidden {
+	visibility: hidden;
+}
+
+.inputNumber {
+	width: 50px;
 }
