--- a/sailing/src/main/resources/templates/book_departure.html
+++ b/sailing/src/main/resources/templates/book_departure.html
@@ -33,7 +33,7 @@
 			class="card my-1">Booking</section>
 
 			<!-- /* TODO - Build a form to get the departure time of the trip (DON'T FORGET TO INCLUDE CSRF FIELD!! */ -->
-			<form th:replace="~{fragments/forms :: registerTrip(${tripType.id})}">Formulario</form>
+			<form th:replace="~{fragments/forms :: registerTrip(${tripType.id}, '/trips/book/book_places')}">Formulario</form>
 
 	</section>
 
