Add new trip Form working ENTIRELY, builds the trip and updates it to the database correctly; it also handles hackers modifying the javascript. Now working in /trips/booked (in TripController).

--- a/sailing/src/main/resources/templates/fragments/forms.html
+++ b/sailing/src/main/resources/templates/fragments/forms.html
@@ -74,14 +74,9 @@
 					<span th:text="#{book.places}" class="card-text">Places</span>
 					&emsp;&emsp;
 					&emsp;
-					<input type="number" class="inputNumber classAsIDinputPlacesNumber" min="1" th:max="${tripFreePlaces}"
-						th:id="places" th:name="places" th:value="${departurePlaces}">
-					
-					<input th:id="places" th:name="places" value="" th:type="hidden" class="classAsIDinputPlacesHidden"></input>
-					<script>
-						var inputNumber = document.getElementsByClassName("classAsIDinputPlacesNumber")[0].value;
-						document.getElementsByClassName("classAsIDinputPlacesHidden")[0].value = inputNumber;
-					</script>
+					<input type="number" class="inputNumber" min="1" th:max="${tripFreePlaces}"
+						th:id="places" th:name="places">
+
 					&emsp;
 					<span class="text-secondary" th:text="#{book.free.places(${tripFreePlaces})}"></span>
 				</span>
