--- a/sailing/src/main/resources/templates/fragments/parts.html
+++ b/sailing/src/main/resources/templates/fragments/parts.html
@@ -20,28 +20,31 @@
 <title>Parts</title>
 </head>
 <div class="row" th:fragment="tripTypes(tripTypes)">
-	<div th:each="tripType, iStat  : ${tripTypes}" class="col-sm-4 col-md-3 my-2">
+	<div th:each="tripType, iStat  : ${tripTypes}"
+		class="col-sm-4 col-md-3 my-2">
 		<div class="card">
 			<div class="card-header">
 				<h5 th:text="${tripType.title}">2 hours trip</h5>
 			</div>
 			<div class="card-body">
 				<p th:text="${tripType.description}" class="card-text">desc</p>
-				<p 
+				<p
 					th:text="${#numbers.formatDecimal(tripType.price, 1, 'COMMA', 0, 'POINT')+ '€'} + ' - ' + ${tripType.duration} + ' ' + (${tripType.duration==1} ? #{parts.trip.hour} : #{parts.trip.hours})"
 					class="card-text h5">0.00€ 1 hour</p>
 				<p th:text="${tripType.maxPlaces} + ' ' + #{parts.trip.places} "
 					class="card-text">places</p>
 				<p class="card-text h6">Departures:</p>
-				<ul class="my-0" th:each="departure, iStat  : ${tripType.departures}">
-					<li  th:text="${#dates.format(departure,'HH:mm')}">9:00</li>
+				<ul class="my-0"
+					th:each="departure, iStat  : ${tripType.departures}">
+					<li th:text="${#dates.format(departure,'HH:mm')}">9:00</li>
 					<li th:remove="all">11:00</li>
 					<li th:remove="all">16:00</li>
 					<li th:remove="all">18:00</li>
 				</ul>
 				<p class="card-text"></p>
-				<a sec:authorize="!hasRole('ADMIN')" th:href="@{/trips/book/{trypTypeId}(trypTypeId=${tripType.id})}"
-				class="btn btn-secondary" th:text="#{book.book}">Book</a>
+				<a sec:authorize="!hasRole('ADMIN')"
+					th:href="@{/trips/book/{trypTypeId}(trypTypeId=${tripType.id})}"
+					class="btn btn-secondary" th:text="#{book.book}">Book</a>
 			</div>
 		</div>
 	</div>
@@ -69,11 +72,71 @@
 				<p class="card-text">0.00€</p>
 				<p class="card-text">salida - llegada</p>
 				<p class="card-text">long</p>
-				<a class="btn btn-secondary" >Book</a>
+				<a class="btn btn-secondary">Book</a>
 			</div>
 		</div>
 	</div>
 
+</div>
+<div class="admin" th:fragment="trips(trips)">
+	<table
+		class="table table-striped table-bordered table-condensed table-responsive">
+		<thead>
+			<tr>
+				<th th:text="#{trips.table.head.id}">#</th>
+				<th th:text="#{trips.table.head.date}">Date</th>
+				<th th:text="#{trips.table.head.departure}">Departure</th>
+				<th th:text="#{trips.table.head.places}">Places</th>
+				<th th:text="#{trips.table.head.type.title}">Type</th>
+				<th th:text="#{trips.table.head.type.category}">Category</th>
+				<th th:text="#{trips.table.head.status}">Status</th>
+				<th th:text="#{trips.table.head.actions}">Actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="trip : ${trips}">
+				<td th:text="${trip.id}">-</td>
+				<td th:text="${trip.date}">-</td>
+				<td th:text="${trip.departure}">-</td>
+				<td th:text="${trip.places}">-</td>
+				<td th:if="${#strings.equals(user.role, 'ADMIN')}" th:text="${trip.clientUsername}"></td>
+				<td th:text="${tripType  hacerrrrr a partir de aquiiiiii}">-</td>
+				<td th:text="${tripType.		}">-</td>
+				<td th:text="${#strings.equals(user.role, 'CLIENT')?user.phone:'-'}">-</td>
+				<td class="text-center">
+					<button th:data-bs-username="${user.username}" type="button"
+						class="btn btn-danger btn-sm" data-bs-toggle="modal"
+						data-bs-target="#removeUserDialog">
+						<i class="bi bi-person-x"></i>
+					</button>
+				</td>
+			</tr>
+			<tr th:remove="all">
+				<td>2</td>
+				<td>Client</td>
+				<td>genis</td>
+				<td>Genís Esteve i Prats</td>
+				<td>1515</td>
+				<td class="text-center">
+					<button type="button" class="btn btn-danger btn-sm">
+						<i class="bi bi-person-dash"></i>
+					</button>
+				</td>
+			</tr>
+			<tr th:remove="all">
+				<td>3</td>
+				<td>Admin</td>
+				<td>laia</td>
+				<td>-</td>
+				<td>-</td>
+				<td class="text-center">
+					<button type="button" class="btn btn-danger btn-sm">
+						<i class="bi bi-person-dash"></i>
+					</button>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
 <body>
 </body>
