Whole work almost done, añadidas clases al css que dotan a la pagina de una estética de glassmorphism; solo falta validar que cuando reschenduleas la fecha no sea anterior o igual a la orginal del trip.

--- a/sailing/src/main/resources/templates/fragments/dialogs.html
+++ b/sailing/src/main/resources/templates/fragments/dialogs.html
@@ -353,8 +353,7 @@
 
 	<!-- Reschedule trip dialog -->
 	<a href="#" class="text-warning" data-bs-toggle="modal"
-		data-bs-target="#trackingDialog" data-bs-tripId="1">Tracking
-		dialog</a>
+		data-bs-target="#trackingDialog" data-bs-tripId="1">Tracking dialog</a>
 
 	<div th:fragment="tracking_dialog">
 		<div id="trackingDialog" class="modal fade ">
