--- a/sailing/src/main/resources/templates/login.html
+++ b/sailing/src/main/resources/templates/login.html
@@ -32,7 +32,7 @@
 				<div class="row justify-content-center overflow-hidden">
 					<div class="col-sm-9 col-md-7 col-lg-5 col-xl-4 gy-5">
 
-						<div class="card">
+						<div class="card bg-frosted-glass">
 
 							<div class="card-header">
 								<h5 th:text="#{login.give.credentials}" class="card-title">Please,
@@ -49,17 +49,17 @@
 								</div>
 
 								<div class="input-group py-1">
-									<span class="input-group-text"> <i
+									<span class="input-group-text bg-frosted-glass"> <i
 										class="bi bi-person-fill"></i>
 									</span> <input th:placeholder="#{login.username}" type="text"
-										name="username" placeholder="Username" class="form-control">
+										name="username" placeholder="Username" class="form-control bg-frosted-glass">
 								</div>
 
 								<div class="input-group py-1">
-									<span class="input-group-text"> <i
+									<span class="input-group-text bg-frosted-glass"> <i
 										class="bi bi-key-fill"></i>
 									</span> <input th:placeholder="#{login.password}" type="password"
-										name="password" placeholder="Password" class="form-control">
+										name="password" placeholder="Password" class="form-control bg-frosted-glass">
 								</div>
 
 							</div>
