--- a/sailing/src/main/resources/static/css/main.css
+++ b/sailing/src/main/resources/static/css/main.css
@@ -1,3 +1,8 @@
+body {
+ background-image: url("../img/background.jpeg");
+ background-color: #CBBD93;
+}
+
 .groupsSection {
 	display:flex;
 	flex-direction: column;
@@ -26,4 +31,17 @@
 
 .inputNumber {
 	width: 50px;
+}
+
+.centerText {
+	text-align: center;
+}
+
+.bg-frosted-glass {
+	background: rgba(255, 255, 255, 0.19);
+	border-radius: 16px;
+	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(8.4px);
+	-webkit-backdrop-filter: blur(8.4px);
+	border: 1px solid rgba(255, 255, 255, 0.3);
 }
